fixed z-index

--- a/files/css/android11/style.css
+++ b/files/css/android11/style.css
@@ -32,7 +32,7 @@
     background-color: #3ddc84;
 }
 .bg-circle-content-11{
-    z-index: 1;
+    z-index: 2;
     top:1600px;
     line-height:3500px;
     font-family: 'Montserrat', sans-serif;
